objects/CustTransParentChildLevel__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AOPSFlagInterval__c</fullName>
        <label>AOPSFlagInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AOPSFlagJobId__c</fullName>
        <label>AOPSFlagJobId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountServiceBatchID__c</fullName>
        <label>AccountServiceBatchID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountServiceBatchInterval__c</fullName>
        <label>AccountServiceBatchInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AddHours__c</fullName>
        <label>AddHours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AddSeconds__c</fullName>
        <label>AddSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CronID_DTL__c</fullName>
        <label>CronID DTL</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CronID__c</fullName>
        <label>CronID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustTranOnDeckBatchID__c</fullName>
        <description>Cron Job Id for CustTranOnDeckBatch batch, to avoid infinite loop of jobs.</description>
        <label>CustTranOnDeckBatchID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerTransitionError__c</fullName>
        <label>CustomerTransitionError</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerTransition_Interval__c</fullName>
        <label>CustomerTransitionInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventFiscalCalcBatchId__c</fullName>
        <label>EventFiscalCalcBatchId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventFiscalCalcBatchInterval__c</fullName>
        <label>EventFiscalCalcBatchInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mod5AfterContBatchInterval__c</fullName>
        <label>Mod5AfterContBatchInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mod5BeforeBatchId__c</fullName>
        <label>Mod5BeforeBatchId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod5BulkLaunchBatchInterval__c</fullName>
        <description>This is for scheduler of batch class  Mod5LaunchBatchClassBulk</description>
        <label>Mod5BulkLaunchBatchInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mod5BulkSplitCreateBatchID__c</fullName>
        <label>Mod5BulkSplitCreateBatchID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod5BulkSplitCreateBatchInterval__c</fullName>
        <label>Mod5BulkSplitCreateBatchInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mod5BulkSplitDeleteBatchID__c</fullName>
        <label>Mod5BulkSplitDeleteBatchID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod5BulkSplitDeleteBatchInterval__c</fullName>
        <label>Mod5BulkSplitDeleteBatchInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mod5InsertCntcBatchV1ID__c</fullName>
        <label>Mod5InsertCntcBatchV1ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod5InsertCntcBatchV1Interval__c</fullName>
        <label>Mod5InsertCntcBatchV1Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mod5LaunchBatchID__c</fullName>
        <description>Cron Job Id for Mod5LaunchBatch batch, to avoid infinite loop of jobs.</description>
        <label>Mod5LaunchBatchID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod5LaunchBatchInterval__c</fullName>
        <description>Used by Mod5LaunchBatch Job for scheduling the Next Job.</description>
        <label>Mod5Launch Batch Interval (In Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mod5LaunchBulkBatchID__c</fullName>
        <label>Mod5LaunchBulkBatchID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod5LaunchUpdate__c</fullName>
        <description>Used in Mod5BulkLaunchUpdate</description>
        <label>Mod5LaunchUpdate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod5OMXIsUpdatedBatchID__c</fullName>
        <label>Mod5OMXIsUpdatedBatchID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod5OMXIsUpdatedBatchInterval__c</fullName>
        <label>Mod5OMXIsUpdatedBatchInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mod5_LaunchUpdateInterval__c</fullName>
        <description>Used in Mod5BulkLaunchUpdate</description>
        <label>Mod5 LaunchUpdateInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mod5beforeBatchInterval__c</fullName>
        <label>Mod5beforeBatchInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgSalesSummaryBatchID__c</fullName>
        <label>OrgSalesSummaryBatchID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgSalesSummaryBatchInterval__c</fullName>
        <label>OrgSalesSummaryBatchInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Child_Level__c</fullName>
        <label>Parent/Child Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary00001ID__c</fullName>
        <label>Primary00001ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary00001Interval__c</fullName>
        <label>Primary00001Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary00002ID__c</fullName>
        <label>Primary00002ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary00002Interval__c</fullName>
        <label>Primary00002Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResendProsMsgBatchID__c</fullName>
        <description>Cron Job Id for ResendProsMsg_Batch batch, to avoid infinite loop of jobs.</description>
        <label>ResendProsMsgBatchID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_EndPoint__c</fullName>
        <label>SOA EndPoint</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledBatchId__c</fullName>
        <label>ScheduledBatchId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SentDNSProcessingBatchID__c</fullName>
        <label>SentDNSProcessingBatchID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SentDNSProcessingBatchInterval__c</fullName>
        <label>SentDNSProcessingBatchInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaskFiscalCalcBatchId__c</fullName>
        <label>TaskFiscalCalcBatchId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskFiscalCalcBatchInterval__c</fullName>
        <label>TaskFiscalCalcBatchInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transition_Interval__c</fullName>
        <description>Used by Transition Header Batch Job for scheduling the Next Job.</description>
        <label>Transition Interval (In Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transition_lnterval_DTL__c</fullName>
        <label>Transition lnterval DTL (In Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpdateOrgRelatedInfoID__c</fullName>
        <label>UpdateOrgRelatedInfoID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateOrgRelatedInfoInterval__c</fullName>
        <label>UpdateOrgRelatedInfoInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soa_user__c</fullName>
        <label>soa user</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cust Trans Parent Child Level</label>
</CustomObject>